Imperialist visuals + improved hit detection Magmaul now explodes on hit rather than only on timeout Hunter weapons now have screenshake Reduced Morph Ball Bomb screenshake Morph ball bombs now deal hunter damage Betsy Morph Ball Bombs renamed to Dragonfire Morph Ball Bombs Fixed Crystal and Pumpkin Bombs secondary projectiles all spawning on the last placed bomb Flash Shift can now be jump canceled when landing on ground or with wall jump

--- a/MetroidMod.csproj
+++ b/MetroidMod.csproj
@@ -10,8 +10,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Assets\Music\" />
-    <Folder Include="Assets\Effects\" />
-    <Folder Include="Assets\Effects\" />
     <Folder Include="Assets\Sounds\" />
     <Folder Include="Assets\Textures\MissileAddons\" />
     <Folder Include="Assets\Textures\SuitAddons\EnergyTank\" />
@@ -34,5 +32,11 @@
     <Compile Remove="ExampleMetroidAddonMod\**" />
     <EmbeddedResource Remove="ExampleMetroidAddonMod\**" />
     <None Remove="ExampleMetroidAddonMod\**" />
+  </ItemGroup>
+  <ItemGroup>
+    <AdditionalFiles Remove="Assets\Effects\ProjectileShaders.fx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Assets\Effects\ProjectileShaders.fx" />
   </ItemGroup>
 </Project>
